bugFix: animation check overflow hidden

--- a/css/menu_1.css
+++ b/css/menu_1.css
@@ -340,6 +340,7 @@ p {
   grid-template-columns: 1fr max-content;
   grid-gap: 0.5rem;
   align-items: center;
+  overflow: hidden;
   background: #fff;
   border-radius: 1.4rem;
   margin-bottom: 1rem;
@@ -383,7 +384,7 @@ p {
   grid-column: 3;
   display: none;
   border-radius: 0 1rem 1rem 0;
-  animation: display-block 0.5s ease-in-out forwards;
+  animation: display-block 1s ease-in-out forwards;
 }
 .page__hero .hero__menu .menu__section .section__card:hover .card__icon {
   display: flex;
@@ -405,7 +406,7 @@ p {
   }
 }
 .page__hero .hero__menu .menu__section .section__card:hover .fa-regular {
-  animation: icon_rotation 0.5s ease-in-out forwards;
+  animation: icon_rotation 1s 0.2s ease-in-out forwards;
 }
 @keyframes icon_rotation {
   to {
